tests/baselines/reference/functionOverloads41.errors.txt
tests/cases/compiler/functionOverloads41.ts(4,14): error TS2322: Type '{}' is not assignable to type '{ a: boolean; }'.
  Index signature is missing in type '{ a: boolean; }'.


==== tests/cases/compiler/functionOverloads41.ts (1 errors) ====
    function foo(bar:{a:number;}[]):string;
    function foo(bar:{a:boolean;}[]):number;
    function foo(bar:{a:any;}[]):any{ return bar }
    var x = foo([{}]);
                 ~~
!!! error TS2322: Type '{}' is not assignable to type '{ a: boolean; }'.
!!! error TS2322:   Index signature is missing in type '{ a: boolean; }'.
    